--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <h2>Featured Mars Image</h2>
 
           <!-- if images is False/None/non-existent, then default to error message -->
-          <img src="{{mars_list.featured_img_url | default('static/images/error.png', true) }}" class="img-responsive"
+          <img src="{{mars_list.featured_img_url}}" class="img-responsive"
           alt="Responsive image">
       </div>
 
